--- a/budapest/png.html
+++ b/budapest/png.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive PNG with Gradient Background</title>
+  <title>Debugging Image Map with Correct Overlays</title>
   <style>
     body {
       margin: 0;
@@ -14,33 +14,57 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      overflow: hidden;
+      overflow: hidden; /* Prevent scrolling */
     }
 
     .image-container {
-      width: auto;
+      position: relative;
+      width: 100%; /* Max width for the container */
       height: auto;
-      max-width: 80%;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     img {
-      width: 100%;
+      max-width: 80%;
+      max-height: 90%; /* Adjust to fit the container */
+      width: auto;
       height: auto;
-      display: block;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+    }
+
+    .overlay {
+      position: absolute;
+      background-color: rgba(255, 0, 0, 0.3); /* Transparent red for debugging */
+      border: 1px solid rgba(255, 0, 0, 0.6); /* Border for better visibility */
+      pointer-events: none; /* Prevent interactions with the overlay */
     }
   </style>
 </head>
 <body>
-  <div class="image-container">
+  <div class="image-container" id="image-container">
     <!-- Embed PNG with Image Map -->
-    <img src="schedule.png" usemap="#schedule-map" alt="Interactive Schedule">
-    <map name="schedule-map">
-      <!-- Example clickable areas -->
-      <area shape="rect" coords="100,200,300,400" href="https://example.com/link1" alt="Link 1">
-      <area shape="rect" coords="400,500,600,700" href="https://example.com/link2" alt="Link 2">
-      <area shape="rect" coords="700,800,900,1000" href="https://example.com/link3" alt="Link 3">
+    <img
+      src="schedule.png"
+      usemap="#schedule-map"
+      alt="Interactive Schedule"
+      id="responsive-image"
+    >
+    <map name="schedule-map" id="schedule-map">
+      <!-- Define the original coordinates of clickable areas -->
+      <area target="_blank" alt="termas" title="termas" href="termas.html" coords="181,723,374,847" shape="rect">
     </map>
+
+    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="image-map-resp/jquery.rwdImageMaps.min.js"></script>
+    <script>
+      $(document).ready(function(e) {
+        $(`img[usemap]`).rwdImageMaps();
+      })
+    </script>
+
   </div>
 </body>
 </html>
