--- a/budapest/png.html
+++ b/budapest/png.html
@@ -20,7 +20,7 @@
     .image-container {
       position: relative;
       width: 100%; /* Max width for the container */
-      height: auto;
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -31,7 +31,6 @@
       max-height: 90%; /* Adjust to fit the container */
       width: auto;
       height: auto;
-      border-radius: 10px;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
     }
 
