--- a/budapest/png.html
+++ b/budapest/png.html
@@ -56,7 +56,7 @@
       <area target="_blank" alt="termas" title="termas" href="termas.html" coords="181,723,374,847" shape="rect">
     </map>
 
-    <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="image-map-resp/jquery.rwdImageMaps.min.js"></script>
     <script>
       $(document).ready(function(e) {
