--- a/budapest/index.html
+++ b/budapest/index.html
@@ -3,123 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>High-Resolution PDF Viewer</title>
+  <title>Budapest Viagem dos Fixes Schedule</title>
   <style>
     body {
       margin: 0;
       padding: 0;
-      background: linear-gradient(to bottom, #A8CFFF, #F5E3FF); /* Seamless gradient background */
+      background: linear-gradient(to bottom, #A8CFFF, #F5E3FF); /* Gradient background */
       font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       overflow: hidden; /* Prevent scrolling */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh; /* Full page height */
     }
 
-    .pdf-container {
-      width: 80%; /* Adjust container width */
-      height: 60%; /* Adjust container height */
-      background-color: transparent; /* Seamless background */
+    .image-container {
+      position: relative;
+      width: 100%; /* Max width for the container */
+      height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    canvas {
-      display: block; /* Ensure the canvas is a block element */
-      width: 100%; /* Scale the canvas down to fit the container */
+    img {
+      max-width: 80%;
+      max-height: 90%; /* Adjust to fit the container */
+      width: auto;
+      height: auto;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+    }
 
-      height: auto; /* Maintain aspect ratio */
+    .overlay {
+      position: absolute;
+      background-color: rgba(255, 0, 0, 0.3); /* Transparent red for debugging */
+      border: 1px solid rgba(255, 0, 0, 0.6); /* Border for better visibility */
+      pointer-events: none; /* Prevent interactions with the overlay */
     }
   </style>
 </head>
 <body>
+  <div class="image-container" id="image-container">
+    <!-- Embed PNG with Image Map -->
+    <img
+      src="schedule.png"
+      usemap="#schedule-map"
+      alt="Interactive Schedule"
+      id="responsive-image"
+    >
+    <map name="schedule-map" id="schedule-map">
+      <!-- Define the original coordinates of clickable areas -->
+      <area target="_blank" alt="termas" title="termas" href="termas.html" coords="181,723,374,847" shape="rect">
+    </map>
 
-  <!-- PDF Container -->
-  <div class="pdf-container">
-    <canvas id="pdf-canvas"></canvas> <!-- PDF renders here -->
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="image-map-resp/jquery.rwdImageMaps.min.js"></script>
+    <script>
+      $(document).ready(function(e) {
+        $(`img[usemap]`).rwdImageMaps();
+      })
+    </script>
+
   </div>
-
-  <!-- Include PDF.js Library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js"></script>
-
-  <!-- Script to Render the PDF -->
-  <script>
-    // URL of the PDF file
-    const pdfUrl = "schedule.pdf";
-
-    // References to the canvas and its context
-    const canvas = document.getElementById("pdf-canvas");
-    const context = canvas.getContext("2d");
-
-    let pdfInstance; // To store the loaded PDF instance
-    let currentPage = 1; // Default to the first page
-
-    // Function to calculate scale based on container size
-    function calculateScale(pageViewport) {
-      const container = document.querySelector('.pdf-container');
-      const containerWidth = container.clientWidth;
-      const containerHeight = container.clientHeight;
-
-      // Scale based on width and height constraints
-      const widthScale = containerWidth / pageViewport.width;
-      const heightScale = containerHeight / pageViewport.height;
-
-      // Use the smaller scale to fit the PDF into the container
-      return Math.min(widthScale, heightScale);
-    }
-
-    // Function to render a page dynamically with high resolution
-    function renderPage() {
-      pdfInstance.getPage(currentPage).then(page => {
-        // Original viewport at default scale
-        const viewport = page.getViewport({ scale: 1 });
-
-        // Calculate dynamic scale based on container size
-        const displayScale = calculateScale(viewport);
-
-        // Set a high resolution scale factor (2x or more for better clarity)
-        const resolutionScale = 5; // Increase to render higher resolution
-        const scaledViewport = page.getViewport({ scale: displayScale * resolutionScale });
-
-        // Set canvas dimensions for high resolution rendering
-        canvas.width = scaledViewport.width;
-        canvas.height = scaledViewport.height;
-
-        // Render the page onto the canvas
-        const renderContext = {
-          canvasContext: context,
-          viewport: scaledViewport
-        };
-        page.render(renderContext);
-
-        // Use CSS to scale the canvas down to the display scale
-        canvas.style.width = `${viewport.width * displayScale}px`;
-        canvas.style.height = `${viewport.height * displayScale}px`;
-      });
-    }
-
-    // Function to handle resizing
-    function resizePdf() {
-      if (pdfInstance) {
-        renderPage(); // Re-render the page with updated dimensions
-      }
-    }
-
-    // Load the PDF document
-    pdfjsLib.getDocument(pdfUrl).promise.then(pdf => {
-      pdfInstance = pdf; // Store the PDF instance
-      renderPage(); // Render the first page
-    }).catch(error => {
-      console.error("Error loading PDF:", error);
-    });
-
-    // Adjust the PDF rendering on window resize
-    window.addEventListener("resize", resizePdf);
-  </script>
-
 </body>
 </html>
