event page finalized

--- a/budapest/index.html
+++ b/budapest/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Budapest Viagem dos Fixes Schedule</title>
+  <title>Budapest Schedule</title>
   <style>
     body {
       margin: 0;
@@ -34,12 +34,6 @@
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
     }
 
-    .overlay {
-      position: absolute;
-      background-color: rgba(255, 0, 0, 0.3); /* Transparent red for debugging */
-      border: 1px solid rgba(255, 0, 0, 0.6); /* Border for better visibility */
-      pointer-events: none; /* Prevent interactions with the overlay */
-    }
   </style>
 </head>
 <body>
@@ -53,7 +47,7 @@
     >
     <map name="schedule-map" id="schedule-map">
       <!-- Define the original coordinates of clickable areas -->
-      <area target="_blank" alt="termas" title="termas" href="termas.html" coords="181,723,374,847" shape="rect">
+      <area target="_blank" alt="termas" title="termas" href="termas" coords="181,723,374,847" shape="rect">
     </map>
 
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
