--- a/budapest/termas/index.html
+++ b/budapest/termas/index.html
@@ -63,8 +63,8 @@
     h1 {
       font-family: 'Barbra', Serif;
       text-transform: uppercase;
-      font-size: 6rem;
-      line-height: 8rem;
+      font-size: 500%;
+      line-height: 6rem;
       color: #4004bd;
       font-weight: normal;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
@@ -77,9 +77,9 @@
       font-weight: lighter;
       letter-spacing: 2px; /* Adjust the value as needed */
       font-size: 2rem;
-      min-width: 400px;
       margin: auto; /* Center horizontally and reduce overall height */
       max-width: 50%;
+      min-width: 300px;
       color: #4004bd;
       text-align: justify;
       padding: 30px;
@@ -150,31 +150,31 @@
     .cloud1 {
       top: 5%;
       left: 5%;
-      width: 200px;
+      width: 20%;
     }
 
     .cloud2 {
-      top: 20%;
+      top: 17%;
       left: 50%;
-      width: 250px;
+      width: 30%;
     }
 
     .cloud3 {
       top: 0%;
       left: 40%;
-      width: 220px;
+      width: 30%;
     }
 
     .bee{
-      top: 30%;
+      top: 20%;
       left: 5%;
-      width: 70px;
+      width: 10%;
     }
 
     .sun{
-      top: -10%;
+      top: 0%;
       left: 75%;
-      width: 300px;
+      width: 30%;
     }
   </style>
 </head>
