added first batch of pages

--- a/budapest/index.html
+++ b/budapest/index.html
@@ -27,8 +27,8 @@
     }
 
     img {
-      max-width: 80%;
-      max-height: 90%; /* Adjust to fit the container */
+      max-width: 90%;
+      max-height: 95%; /* Adjust to fit the container */
       width: auto;
       height: auto;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* Subtle shadow */
@@ -47,7 +47,11 @@
     >
     <map name="schedule-map" id="schedule-map">
       <!-- Define the original coordinates of clickable areas -->
-      <area target="_blank" alt="termas" title="termas" href="termas" coords="181,723,374,847" shape="rect">
+      <area target="_blank" alt="termas" title="termas" href="termas" coords="181,751,375,834" shape="rect">
+      <area target="_blank" alt="zoocafe" title="zoocafe" href="zoocafe" coords="181,943,376,1008" shape="rect">
+      <area target="-_blank" alt="iceskate" title="iceskate" href="iceskate" coords="395,911,590,1008" shape="rect">
+      <area target="_blank" alt="evecruise" title="evecruise" href="evecruise" coords="611,961,803,1016" shape="rect">
+      <area target="_blank" alt="walktour" title="walktour" href="walktour" coords="182,512,375,619" shape="rect">
     </map>
 
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
