--- a/budapest/index.html
+++ b/budapest/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="graphics/bee.png" type="image/png">
   <title>Budapest Schedule</title>
   <style>
     body {
@@ -61,7 +62,6 @@
         $(`img[usemap]`).rwdImageMaps();
       })
     </script>
-
   </div>
 </body>
 </html>
