add pages and more image-maps

--- a/budapest/index.html
+++ b/budapest/index.html
@@ -53,6 +53,15 @@
       <area target="-_blank" alt="iceskate" title="iceskate" href="iceskate" coords="395,911,590,1008" shape="rect">
       <area target="_blank" alt="evecruise" title="evecruise" href="evecruise" coords="611,961,803,1016" shape="rect">
       <area target="_blank" alt="walktour" title="walktour" href="walktour" coords="182,512,375,619" shape="rect">
+      <area target="_blank" alt="brunch" title="brunch" href="brunch" coords="612,559,804,642" shape="rect">
+      <area target="_blank" alt="lunch" title="lunch" href="lunchmazeltov" coords="395,632,588,715" shape="rect">
+      <area target="_blank" alt="home" title="home" href="home" coords="180,846,375,930" shape="rect">
+      <area target="_blank" alt="homedinner" title="homedinner" href="home" coords="180,1014,374,1100" shape="rect">
+      <area target="_blank" alt="dinnercompre" title="dinnercompre" href="home" coords="394,1014,589,1100" shape="rect">
+      <area target="_blank" alt="packleave" title="packleave" href="home" coords="826,416,1023,499" shape="rect">
+
+
+
     </map>
 
     <script src = "https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
