--- a/budapest/index.html
+++ b/budapest/index.html
@@ -59,6 +59,13 @@
       <area target="_blank" alt="homedinner" title="homedinner" href="home" coords="180,1014,374,1100" shape="rect">
       <area target="_blank" alt="dinnercompre" title="dinnercompre" href="home" coords="394,1014,589,1100" shape="rect">
       <area target="_blank" alt="packleave" title="packleave" href="home" coords="826,416,1023,499" shape="rect">
+      <area target="_blank" alt="aldi" title="aldi" href="lunchstreet" coords="181,632,374,738" shape="rect">
+      <area target="_blank" alt="goingout" title="goingout" href="goingout" coords="393,1113,588,1198" shape="rect">
+      <area target="_blank" alt="sundaydinner" title="sundaydinner" href="sundaydinner" coords="610,1028,804,1122" shape="rect">
+      <area target="_blank" alt="onedrink" title="onedrink" href="onedrink" coords="612,1134,804,1197" shape="rect">
+
+
+
 
 
 
