--- a/budapest/index.html
+++ b/budapest/index.html
@@ -48,6 +48,7 @@
     >
     <map name="schedule-map" id="schedule-map">
       <!-- Define the original coordinates of clickable areas -->
+      <area target="_blank" alt="docs" title="docs" href="https://docs.google.com/document/d/1CbNuIUP5km7JNW8C9OTAIKRyBaV6SOlCnsIKq-90U-Y/edit?tab=t.0" coords="43,98,1036,252" shape="rect">
       <area target="_blank" alt="termas" title="termas" href="termas" coords="181,751,375,834" shape="rect">
       <area target="_blank" alt="zoocafe" title="zoocafe" href="zoocafe" coords="181,943,376,1008" shape="rect">
       <area target="-_blank" alt="iceskate" title="iceskate" href="iceskate" coords="395,911,590,1008" shape="rect">
@@ -63,6 +64,8 @@
       <area target="_blank" alt="goingout" title="goingout" href="goingout" coords="393,1113,588,1198" shape="rect">
       <area target="_blank" alt="sundaydinner" title="sundaydinner" href="sundaydinner" coords="610,1028,804,1122" shape="rect">
       <area target="_blank" alt="onedrink" title="onedrink" href="onedrink" coords="612,1134,804,1197" shape="rect">
+      <area target="_blank" alt="visitpeste" title="visitpeste" href="visitpeste" coords="396,462,590,618" shape="rect">
+
 
 
 
