--- a/budapest/index.html
+++ b/budapest/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="graphics/bee.png">
   <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png">
-  <title>Budapest Schedule</title>
+  <title>BudaPlan</title>
   <style>
     body {
       margin: 0;
