--- a/budapest/install.html
+++ b/budapest/install.html
@@ -3,76 +3,79 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Install Budapest Schedule App</title>
-  <link rel="icon" href="graphics/bee.png">
-  <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png">
-  <link rel="manifest" href="manifest.json">
+  <title>Install BudaPlan</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
+      line-height: 1.5rem;
     }
-    .install-button {
-      display: none;
-      padding: 10px 20px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      font-size: 16px;
+    h1 {
+      color: #28027a;
+    }
+    .icon {
+      max-width: 200px;
+      height: 20px;
+      margin: 0px 0px;
+    }
+    .instructions {
+      display: none; /* Initially hidden */
+      text-align: left;
+      margin: 20px auto;
+      max-width: 600px;
+    }
+    .instructions ol{
+      font-size: 19px;
+    }
+    .store-links {
+      margin: 20px;
+    }
+    .store-links img {
+      width: 200px;
+      height: 70px;
+      margin: 10px;
       cursor: pointer;
     }
-    .install-button:active {
-      background-color: #0056b3;
-    }
+
   </style>
 </head>
 <body>
-  <h1>Install the Budapest Schedule App</h1>
-  <p>Add our app to your device for quick access and a full web app experience!</p>
+  <h1>Install BudaPlan</h1>
+  <p>Follow the steps below to add the BudaPlan app to your device.</p>
 
-  <!-- Button for PWA Installation -->
-  <button id="installButton" class="install-button">Install App</button>
+  <div class="store-links">
+    <!-- Fake App Store and Play Store buttons -->
+    <img src="graphics/appstore.png" alt="Download on the App Store" onclick="showInstructions('ios-instructions')">
+    <img src="graphics/android.png" alt="Get it on Google Play" onclick="showInstructions('android-instructions')">
+  </div>
 
-  <!-- Instructions for iOS Users -->
-  <div id="iosInstructions" style="display: none;">
-    <h3>iOS Users</h3>
-    <p>Tap <span style="font-weight: bold;">Share</span> (<img src="graphics/share-icon.png" alt="Share Icon" style="width: 20px; vertical-align: middle;">) and select <span style="font-weight: bold;">"Add to Home Screen"</span>.</p>
+  <div id="ios-instructions" class="instructions">
+    <h2>For iOS Users</h2>
+    <ol>
+      <li>On this page, tap the <img src="graphics/share2.png" alt="Share Icon" class="icon"> button at the bottom of the screen.</li>
+      <li>Select <strong>Add to Home Screen</strong>.</li>
+      <li>Confirm by tapping <strong>Add</strong>.</li>
+    </ol>
+  </div>
+
+  <div id="android-instructions" class="instructions">
+    <h2>For Android Users</h2>
+    <ol>
+      <li>On this page, tap the <img src="graphics/threedots.png" alt="Three Dot Menu Icon" class="icon"> (three-dot menu) in the top-right corner.</li>
+      <li>Choose <strong>Add to Home Screen</strong>.</li>
+      <li>Follow the prompts to confirm.</li>
+    </ol>
   </div>
 
   <script>
-    let deferredPrompt;
+    function showInstructions(id) {
+      // Hide all instruction divs
+      const instructions = document.querySelectorAll('.instructions');
+      instructions.forEach(inst => inst.style.display = 'none');
 
-    // Detect platform
-    const isIos = /iphone|ipad|ipod/i.test(navigator.userAgent);
-    const isAndroid = /android/i.test(navigator.userAgent);
-
-    const installButton = document.getElementById("installButton");
-    const iosInstructions = document.getElementById("iosInstructions");
-
-    if (isIos) {
-      // Show iOS-specific instructions
-      iosInstructions.style.display = "block";
-    } else {
-      // Add event listener for Android
-      window.addEventListener("beforeinstallprompt", (event) => {
-        event.preventDefault();
-        deferredPrompt = event;
-        installButton.style.display = "block";
-
-        installButton.addEventListener("click", () => {
-          deferredPrompt.prompt();
-          deferredPrompt.userChoice.then((choiceResult) => {
-            if (choiceResult.outcome === "accepted") {
-              console.log("App installed");
-            } else {
-              console.log("App installation dismissed");
-            }
-            deferredPrompt = null;
-          });
-        });
-      });
+      // Show the clicked instruction div
+      document.getElementById(id).style.display = 'block';
     }
   </script>
 </body>
