--- a/budapest/install.html
+++ b/budapest/install.html
@@ -12,7 +12,7 @@
       line-height: 1.5rem;
     }
     h1 {
-      color: #28027a;
+      color: #1e1e1e;
     }
     .icon {
       max-width: 200px;
