--- a/budapest/index.html
+++ b/budapest/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="graphics/bee.png">
-  <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png">
+  <link rel="icon" href="graphics/apple-touch-icon.png">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
