quick color fix

--- a/budapest/index.html
+++ b/budapest/index.html
@@ -8,6 +8,7 @@
   <link rel="apple-touch-icon" href="graphics/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#A8CFFF">
   <title>BudaPlan</title>
   <style>
     body {
