--- a/budapest/iceskate/index.html
+++ b/budapest/iceskate/index.html
@@ -6,6 +6,7 @@
   <title>Ice Skatting</title>
   <link rel="icon" href="../graphics/bee.png" type="image/png">
   <link rel="stylesheet" href="../css/style.css">
+  <meta name="theme-color" content="#A8CFFF">
 </head>
 <body>
   <div class="container">
