--- a/budapest/install.html
+++ b/budapest/install.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#ffffff">
   <title>Install BudaPlan</title>
   <style>
     body {
