--- a/budapest/lunchstreet/index.html
+++ b/budapest/lunchstreet/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   <div class="container">
+    <a href="/budapest" style="text-decoration: none;">
     <h1>Street Lunch</h1>
+    </a>
     <p class="didyouknow">
       DID YOU KNOW?
     </p>
