adding last, removing target = _blank

--- a/budapest/index.html
+++ b/budapest/index.html
@@ -53,23 +53,29 @@
     >
     <map name="schedule-map" id="schedule-map">
       <!-- Define the original coordinates of clickable areas -->
-      <area target="_blank" alt="docs" title="docs" href="https://docs.google.com/document/d/1CbNuIUP5km7JNW8C9OTAIKRyBaV6SOlCnsIKq-90U-Y/edit?tab=t.0" coords="43,98,1036,252" shape="rect">
-      <area target="_blank" alt="termas" title="termas" href="termas" coords="181,751,375,834" shape="rect">
-      <area target="_blank" alt="zoocafe" title="zoocafe" href="zoocafe" coords="181,943,376,1008" shape="rect">
-      <area target="-_blank" alt="iceskate" title="iceskate" href="iceskate" coords="395,911,590,1008" shape="rect">
-      <area target="_blank" alt="evecruise" title="evecruise" href="evecruise" coords="611,961,803,1016" shape="rect">
-      <area target="_blank" alt="walktour" title="walktour" href="walktour" coords="182,512,375,619" shape="rect">
-      <area target="_blank" alt="brunch" title="brunch" href="brunch" coords="612,559,804,642" shape="rect">
-      <area target="_blank" alt="lunch" title="lunch" href="lunchmazeltov" coords="395,632,588,715" shape="rect">
-      <area target="_blank" alt="home" title="home" href="home" coords="180,846,375,930" shape="rect">
-      <area target="_blank" alt="homedinner" title="homedinner" href="home" coords="180,1014,374,1100" shape="rect">
-      <area target="_blank" alt="dinnercompre" title="dinnercompre" href="home" coords="394,1014,589,1100" shape="rect">
-      <area target="_blank" alt="packleave" title="packleave" href="home" coords="826,416,1023,499" shape="rect">
-      <area target="_blank" alt="aldi" title="aldi" href="lunchstreet" coords="181,632,374,738" shape="rect">
-      <area target="_blank" alt="goingout" title="goingout" href="goingout" coords="393,1113,588,1198" shape="rect">
-      <area target="_blank" alt="sundaydinner" title="sundaydinner" href="sundaydinner" coords="610,1028,804,1122" shape="rect">
-      <area target="_blank" alt="onedrink" title="onedrink" href="onedrink" coords="612,1134,804,1197" shape="rect">
-      <area target="_blank" alt="visitpeste" title="visitpeste" href="visitpeste" coords="396,462,590,618" shape="rect">
+      <area alt="docs" title="docs" href="https://docs.google.com/document/d/1CbNuIUP5km7JNW8C9OTAIKRyBaV6SOlCnsIKq-90U-Y/edit?tab=t.0" coords="43,98,1036,252" shape="rect">
+      <area alt="termas" title="termas" href="termas" coords="181,751,375,834" shape="rect">
+      <area alt="zoocafe" title="zoocafe" href="zoocafe" coords="181,943,376,1008" shape="rect">
+      <area alt="iceskate" title="iceskate" href="iceskate" coords="395,911,590,1008" shape="rect">
+      <area alt="evecruise" title="evecruise" href="evecruise" coords="611,961,803,1016" shape="rect">
+      <area alt="walktour" title="walktour" href="walktour" coords="182,512,375,619" shape="rect">
+      <area alt="brunch" title="brunch" href="brunch" coords="612,559,804,642" shape="rect">
+      <area alt="lunch" title="lunch" href="lunchmazeltov" coords="395,632,588,715" shape="rect">
+      <area alt="home" title="home" href="home" coords="180,846,375,930" shape="rect">
+      <area alt="homedinner" title="homedinner" href="home" coords="180,1014,374,1100" shape="rect">
+      <area alt="dinnercompre" title="dinnercompre" href="home" coords="394,1014,589,1100" shape="rect">
+      <area alt="packleave" title="packleave" href="home" coords="826,416,1023,499" shape="rect">
+      <area alt="aldi" title="aldi" href="lunchstreet" coords="181,632,374,738" shape="rect">
+      <area alt="goingout" title="goingout" href="goingout" coords="393,1113,588,1198" shape="rect">
+      <area alt="sundaydinner" title="sundaydinner" href="sundaydinner" coords="610,1028,804,1122" shape="rect">
+      <area alt="onedrink" title="onedrink" href="onedrink" coords="612,1134,804,1197" shape="rect">
+      <area alt="visitpeste" title="visitpeste" href="visitpeste" coords="396,462,590,618" shape="rect">
+      <area alt="islandcafe" title="islandcafe" href="islandcafe" coords="612,792,805,838" shape="rect">
+      <area alt="visitmargit" title="visitmargit" href="visitmargit" coords="612,656,804,778" shape="rect">
+      <area alt="visitmargit" title="visitmargit" href="visitmargit" coords="612,852,804,946" shape="rect">
+
+
+
 
 
 
