--- a/budapest/index.html
+++ b/budapest/index.html
@@ -73,6 +73,8 @@
       <area alt="islandcafe" title="islandcafe" href="islandcafe" coords="612,792,805,838" shape="rect">
       <area alt="visitmargit" title="visitmargit" href="visitmargit" coords="612,656,804,778" shape="rect">
       <area alt="visitmargit" title="visitmargit" href="visitmargit" coords="612,852,804,946" shape="rect">
+      <area alt="airport" title="airport" href="airport" coords="827,720,1020,806" shape="rect">
+
 
 
 
