--- a/budapest/home/index.html
+++ b/budapest/home/index.html
@@ -24,7 +24,7 @@
       <button onclick="requestPassword()">Get Secret Instructions</button>
     </div>
     <div id="wifiQR" style="display:none;">
-      <p>Scan the QR code below to connect to Wi-Fi:</p>
+      <p>Scan (or press and hold + Join Network) the QR code to connect:</p>
       <img src="https://api.qrserver.com/v1/create-qr-code/?data=WIFI:S:UPCD4C5DF3;T:WPA;P:8wkMy2eVdwda;;" alt="Wi-Fi QR Code">
     </div>
     <div class="clouds">
