--- a/matte/index.html
+++ b/matte/index.html
@@ -90,7 +90,7 @@
 </table>
 
 <!-- 2nd Table -->
-<table style="padding-top: 150px; padding-bottom: 100px; border-collapse: collapse;"
+<table style="padding-top: 15%; padding-bottom: 10%; border-collapse: collapse;"
        cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:20%">
@@ -127,7 +127,7 @@
 </table>
 
 <!-- 3rd Table -->
-<table style="padding-top: 10px; padding-bottom: 100px; border-collapse: collapse;"
+<table style="padding-bottom: 10%; border-collapse: collapse;"
        cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:7.8%">
@@ -216,7 +216,7 @@
 </div>
 
 <!-- 4th Table -->
-<table style="padding-top: 10px; padding-bottom: 100px; border-collapse: collapse; width: 55%"
+<table style="padding-top: 10px; padding-bottom: 15%; border-collapse: collapse; width: 55%"
        cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:100%" colspan="3">
@@ -260,8 +260,8 @@
 </div>
 
 <!-- 5th Table -->
-<table style="padding-top: 100px; padding-bottom: 100px; border-collapse: collapse;"
-       cellspacing="0" cellpadding="15" border="0">
+<table style="padding-top: 15%; border-collapse: collapse;"
+       cellspacing="0" cellpadding="8%" border="0">
     <tr>
         <th style="width:17%">
             <img loading="lazy" class="myImages"
@@ -291,7 +291,7 @@
 </table>
 
 <!-- 6th Table -->
-<table style="padding-top: 50px; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 15%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:25%">
             <img loading="lazy" class="myImages"
@@ -329,7 +329,7 @@
 </table>
 
 <!-- 7th Table -->
-<table style="padding-top: 100px; width: 60%; border-collapse: collapse;"
+<table style="padding-top: 15%; width: 60%; border-collapse: collapse;"
        cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:32.2%">
@@ -354,7 +354,7 @@
         </th>
     </tr>
 </table>
-<div style="padding-top: 8px"></div>
+<div style="padding-top: 0.5%"></div>
 <table cellpadding="0" border="0" style="width: 60%; padding-bottom: 100px;">
     <tr>
         <th style="width:36%">
