--- a/matte/index.html
+++ b/matte/index.html
@@ -216,7 +216,7 @@
 </div>
 
 <!-- 4th Table -->
-<table style="padding-top: 10px; padding-bottom: 15%; border-collapse: collapse; width: 55%"
+<table style=" padding-bottom: 15%; border-collapse: collapse; width: 55%"
        cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:100%" colspan="3">
@@ -260,8 +260,8 @@
 </div>
 
 <!-- 5th Table -->
-<table style="padding-top: 15%; border-collapse: collapse;"
-       cellspacing="0" cellpadding="8%" border="0">
+<table style="padding-top: 10%; border-collapse: collapse;"
+       cellspacing="0" cellpadding="5%" border="0">
     <tr>
         <th style="width:17%">
             <img loading="lazy" class="myImages"
@@ -291,7 +291,7 @@
 </table>
 
 <!-- 6th Table -->
-<table style="padding-top: 15%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
+<table style="padding-top: 10%; border-collapse: collapse;" cellspacing="0" cellpadding="0" border="0">
     <tr>
         <th style="width:25%">
             <img loading="lazy" class="myImages"
